# exercise

./: .gitignore  Cargo.toml  README.md
attempt/: Cargo.toml
attempt/src/: lib.rs  student.rs
attempt/src/req/: req.rs
src/: bubble.rs  main.rs
src/sort/: bubble.rs
tasks/src/: lib.rs
tasks/src/course3/: bubble.rs
tasks/src/course4/: add_u32.rs  mod.rs  print_area.rs  traffic_light.rs
