[package]
name = "exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tasks = {path = "./tasks"}
attempt = {path = "attempt"}


# [lib]
# name = "attempt"
# path = "./attempt/src/lib.rs"
# crate-type = ["lib"]


# [workspace]
# members = [
#     #"tasks",
#     #"attempt"
# ]
